apps/coder/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coder
  annotations:
    argocd.argoproj.io/tracking-id: "coder:/Namespace:coder/coder"
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: v1
kind: Namespace
metadata:
  name: coder-worker
  annotations:
    argocd.argoproj.io/tracking-id: "coder:/Namespace:coder-worker/coder-worker"
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
