apps/coder/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coder
  namespace: coder
  annotations:
    kubernetes.io/ingress.class: cloudflare-tunnel
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: coder.akatuki-host.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coder
                port:
                  number: 80
